Fix alignment of main element for backups, restores, downloads

--- a/client/landing/jetpack-cloud/sections/backups/style.scss
+++ b/client/landing/jetpack-cloud/sections/backups/style.scss
@@ -1,3 +1,8 @@
 .backups__page .filterbar .filterbar__wrap.card {
     display: inline-block;
 }
+
+.backups__page .main {
+	margin-left: auto;
+}
+
